--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitcoin = "0.27"
 reqwest = "0.11"
+bitcoin = "0.27"
 hex = "0.4"
+tokio = { version = "1", features = ["full"] }
